--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  color: #2c3e50;
 }
 
 .container {
@@ -94,6 +95,9 @@ body {
 .table {
   width: 100%;
   border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 16px;
+  text-align: left;
 }
 
 .table__header,
@@ -109,14 +113,19 @@ body {
 
 .table-container {
   overflow-x: auto;
-  margin: 1rem 0;
+  margin: 0 auto;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  max-width: 100%;
+  padding: 20px;
 }
 
 .table {
-  min-width: 100%;
+  max-width: 80%;
   background-color: white;
+  margin: 0 auto;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
 
 .table__header {
@@ -125,7 +134,7 @@ body {
   font-weight: 600;
   font-size: 0.875rem;
   color: #374151;
-  background-color: #f9fafb;
+  background-color: #119b6e5e;
   border-bottom: 2px solid #e5e7eb;
 }
 
@@ -210,7 +219,7 @@ body {
 .tabs__button {
   padding: 10px 20px;
   border: none;
-  background-color: #f0f0f0;
+  background-color: #119b6e5e;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -416,7 +425,7 @@ body {
 }
 
 .search-form {
-  margin-bottom: 200px;
+  margin-bottom: 50px;
 }
 
 .search-form input[type="text"] {
@@ -456,4 +465,14 @@ body {
 
 .action-buttons .modern-action-button {
   margin-right: 10px;
+}
+
+.sidebar__header {
+  padding: 1rem;
+  text-align: center;
+}
+
+.sidebar__logo {
+  max-width: 200px;
+  height: auto;
 }
