--- a/app/templates/detalle_valoracion.html
+++ b/app/templates/detalle_valoracion.html
@@ -126,6 +126,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="grid-section">
+            <h4>Última Dieta</h4>
+            <div class="grid-data">
+                <div class="grid-item">
+                    <strong>Dieta:</strong>
+                    <p>{{ valoracion['ultima_dieta'] or 'No registrada' }}</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Historial de Valoraciones -->
