Actualización visual para tablas

--- a/app/templates/detalle_paciente.html
+++ b/app/templates/detalle_paciente.html
@@ -3,139 +3,140 @@
 {% block title %}Detalle del Paciente{% endblock %}
 
 {% block content %}
-<h2>Detalle del Paciente</h2>
-<div class="paciente-detalle">
-    <p><strong>Nombre:</strong> {{ paciente['nombre'] }}</p>
-    <p><strong>Apellido Paterno:</strong> {{ paciente['apellido_paterno'] }}</p>
-    <p><strong>Apellido Materno:</strong> {{ paciente['apellido_materno'] }}</p>
-    <p><strong>Fecha de Nacimiento:</strong> {{ paciente['fecha_nacimiento'] }}</p>
-    <p><strong>Teléfono:</strong> {{ paciente['telefono'] }}</p>
-    <p><strong>Correo:</strong> {{ paciente['correo'] }}</p>
-    <p><strong>Ciudad:</strong> {{ paciente['ciudad'] }}</p>
-    <p><strong>Estatus:</strong> {{ paciente['status'] }}</p>
-    <p><strong>Última Dieta:</strong> {{ ultima_valoracion['ultima_dieta'] if ultima_valoracion else 'No registrada' }}</p>
-    <p><strong>Último Pago:</strong> {{ ultimo_pago['fecha_pago'] if ultimo_pago else 'No registrado' }}</p>
-</div>
-
-<div class="action-buttons">
-    <a href="{{ url_for('valoracion.nueva_valoracion', paciente_id=paciente['id']) }}" class="action-button">
-        <i class="fas fa-plus-circle"></i> Nueva Valoración Antropométrica
-    </a>
-    <a href="{{ url_for('valoracion.lista_valoraciones', paciente_id=paciente['id']) }}" class="action-button">
-        <i class="fas fa-weight"></i> Ver Valoraciones Antropométricas
-    </a>
-    <a href="{{ url_for('historial_clinico.ver_crear_historial', paciente_id=paciente['id']) }}" class="action-button">
-        <i class="fas fa-notes-medical"></i> Capturar Historial Clínico
-    </a>
-</div>
-
-<div class="valoracion-grid">
-    <div class="valoracion-card">
-        <h3 class="valoracion-card__title"><i class="fas fa-calendar"></i> Registrar Fecha Pago</h3>
-        <div class="valoracion-card__content">
-            <div class="data-item">
-                <form action="{{ url_for('pacientes.registrar_pago_paciente', id=paciente['id']) }}" method="POST">
-                    <div class="form-group">
-                        <label for="ultima_dieta" class="form-label">Registrar Pago:</label>
-                        <input type="date" id="fecha_pago" name="fecha_pago" class="form-input" required>
-                    </div>
-                    <button type="submit" class="form-button">Registrar Pago</button>
-                </form>
-            </div>
-        </div>
+<div class="table-container">
+    <h2>Detalle del Paciente</h2>
+    <div class="paciente-detalle">
+        <p><strong>Nombre:</strong> {{ paciente['nombre'] }}</p>
+        <p><strong>Apellido Paterno:</strong> {{ paciente['apellido_paterno'] }}</p>
+        <p><strong>Apellido Materno:</strong> {{ paciente['apellido_materno'] }}</p>
+        <p><strong>Fecha de Nacimiento:</strong> {{ paciente['fecha_nacimiento'] }}</p>
+        <p><strong>Teléfono:</strong> {{ paciente['telefono'] }}</p>
+        <p><strong>Correo:</strong> {{ paciente['correo'] }}</p>
+        <p><strong>Ciudad:</strong> {{ paciente['ciudad'] }}</p>
+        <p><strong>Estatus:</strong> {{ paciente['status'] }}</p>
+        <p><strong>Última Dieta:</strong> {{ ultima_valoracion['ultima_dieta'] if ultima_valoracion else 'No registrada' }}</p>
+        <p><strong>Último Pago:</strong> {{ ultimo_pago['fecha_pago'] if ultimo_pago else 'No registrado' }}</p>
     </div>
-    
-    <div class="valoracion-card">
-        <h3 class="valoracion-card__title"><i class="fas fa-calendar"></i> Registrar Última Dieta</h3>
+
+    <div class="action-buttons">
+        <a href="{{ url_for('valoracion.nueva_valoracion', paciente_id=paciente['id']) }}" class="action-button">
+            <i class="fas fa-plus-circle"></i> Nueva Valoración Antropométrica
+        </a>
+        <a href="{{ url_for('valoracion.lista_valoraciones', paciente_id=paciente['id']) }}" class="action-button">
+            <i class="fas fa-weight"></i> Ver Valoraciones Antropométricas
+        </a>
+        <a href="{{ url_for('historial_clinico.ver_crear_historial', paciente_id=paciente['id']) }}" class="action-button">
+            <i class="fas fa-notes-medical"></i> Capturar/Actualizar Historial Clínico
+        </a>
+    </div>
+
+    <div class="valoracion-grid">
+        <div class="valoracion-card">
+            <h3 class="valoracion-card__title"><i class="fas fa-calendar"></i> Registrar Fecha Pago</h3>
             <div class="valoracion-card__content">
                 <div class="data-item">
-                    <form action="{{ url_for('pacientes.detalle_paciente', id=paciente['id']) }}" method="POST">
+                    <form action="{{ url_for('pacientes.registrar_pago_paciente', id=paciente['id']) }}" method="POST">
                         <div class="form-group">
-                            <label for="ultima_dieta" class="form-label">Última Dieta:</label>
-                            <input type="text" id="ultima_dieta" name="ultima_dieta" class="form-input" maxlength="8" required>
+                            <label for="ultima_dieta" class="form-label">Registrar Pago:</label>
+                            <input type="date" id="fecha_pago" name="fecha_pago" class="form-input" required>
                         </div>
-                        <button type="submit" class="form-button">Registrar Dieta</button>
+                        <button type="submit" class="form-button">Registrar Pago</button>
                     </form>
                 </div>
             </div>
         </div>
+        
+        <div class="valoracion-card">
+            <h3 class="valoracion-card__title"><i class="fas fa-apple-alt"></i> Registrar Última Dieta</h3>
+                <div class="valoracion-card__content">
+                    <div class="data-item">
+                        <form action="{{ url_for('pacientes.detalle_paciente', id=paciente['id']) }}" method="POST">
+                            <div class="form-group">
+                                <label for="ultima_dieta" class="form-label">Última Dieta:</label>
+                                <input type="text" id="ultima_dieta" name="ultima_dieta" class="form-input" maxlength="8" required>
+                            </div>
+                            <button type="submit" class="form-button">Registrar Dieta</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="valoracion-grid">
+        {% if historial %}   
+            <!-- Sección de Actividad Física -->
+            <div class="valoracion-card">
+                <h3 class="valoracion-card__title"> <i class="fas fa-running"></i>  Actividad Física</h3>
+                <div class="valoracion-card__content">
+                    <div class="data-item">
+                        <span class="data-label">Tipo de Actividad:</span>
+                        <span class="data-value">{{ historial['tipo_actividad_fisica'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Frecuencia:</span>
+                        <span class="data-value">{{ historial['frecuencia_actividad_fisica'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Tiempo:</span>
+                        <span class="data-value">{{ historial['tiempo_actividad_fisica'] or 'No registrado' }}</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sección de Alimentación -->
+            <div class="valoracion-card">
+                <h3 class="valoracion-card__title"><i class="fas fa-utensils"></i> Alimentación</h3>
+                <div class="valoracion-card__content">
+                    <div class="data-item">
+                        <span class="data-label">Número de Comidas Diarias:</span>
+                        <span class="data-value">{{ historial['numero_comidas_diarias'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Alimentos que Consume Normalmente:</span>
+                        <span class="data-value">{{ historial['alimentos_normales'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Alimentos que No le Gustan:</span>
+                        <span class="data-value">{{ historial['alimentos_no_gustados'] or 'No registrado' }}</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sección de Historial Médico -->
+            <div class="valoracion-card">
+                <h3 class="valoracion-card__title"><i class="fas fa-notes-medical"></i> Historial Médico</h3>
+                <div class="valoracion-card__content">
+                    <div class="data-item">
+                        <span class="data-label">Cirugías:</span>
+                        <span class="data-value">{{ historial['cirugias'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Padecimientos:</span>
+                        <span class="data-value">{{ historial['padecimientos'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Medicamentos:</span>
+                        <span class="data-value">{{ historial['medicamentos'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Suplementos:</span>
+                        <span class="data-value">{{ historial['suplementos'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Enfermedades Previas:</span>
+                        <span class="data-value">{{ historial['enfermedades_previas'] or 'No registrado' }}</span>
+                    </div>
+                    <div class="data-item">
+                        <span class="data-label">Enfermedades Actuales:</span>
+                        <span class="data-value">{{ historial['enfermedades_actuales'] or 'No registrado' }}</span>
+                    </div>
+                </div>
+            </div>
+        {% else %}
+            <p class="no-data">No hay historial clínico registrado.</p>
+        {% endif %}
     </div>
-
-    <div class="valoracion-grid">
-    {% if historial %}   
-        <!-- Sección de Actividad Física -->
-        <div class="valoracion-card">
-            <h3 class="valoracion-card__title"> <i class="fas fa-running"></i>  Actividad Física</h3>
-            <div class="valoracion-card__content">
-                <div class="data-item">
-                    <span class="data-label">Tipo de Actividad:</span>
-                    <span class="data-value">{{ historial['tipo_actividad_fisica'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Frecuencia:</span>
-                    <span class="data-value">{{ historial['frecuencia_actividad_fisica'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Tiempo:</span>
-                    <span class="data-value">{{ historial['tiempo_actividad_fisica'] or 'No registrado' }}</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Sección de Alimentación -->
-        <div class="valoracion-card">
-            <h3 class="valoracion-card__title"><i class="fas fa-utensils"></i> Alimentación</h3>
-            <div class="valoracion-card__content">
-                <div class="data-item">
-                    <span class="data-label">Número de Comidas Diarias:</span>
-                    <span class="data-value">{{ historial['numero_comidas_diarias'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Alimentos que Consume Normalmente:</span>
-                    <span class="data-value">{{ historial['alimentos_normales'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Alimentos que No le Gustan:</span>
-                    <span class="data-value">{{ historial['alimentos_no_gustados'] or 'No registrado' }}</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Sección de Historial Médico -->
-        <div class="valoracion-card">
-            <h3 class="valoracion-card__title"><i class="fas fa-notes-medical"></i> Historial Médico</h3>
-            <div class="valoracion-card__content">
-                <div class="data-item">
-                    <span class="data-label">Cirugías:</span>
-                    <span class="data-value">{{ historial['cirugias'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Padecimientos:</span>
-                    <span class="data-value">{{ historial['padecimientos'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Medicamentos:</span>
-                    <span class="data-value">{{ historial['medicamentos'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Suplementos:</span>
-                    <span class="data-value">{{ historial['suplementos'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Enfermedades Previas:</span>
-                    <span class="data-value">{{ historial['enfermedades_previas'] or 'No registrado' }}</span>
-                </div>
-                <div class="data-item">
-                    <span class="data-label">Enfermedades Actuales:</span>
-                    <span class="data-value">{{ historial['enfermedades_actuales'] or 'No registrado' }}</span>
-                </div>
-            </div>
-        </div>
-    {% else %}
-        <p class="no-data">No hay historial clínico registrado.</p>
-    {% endif %}
 </div>
-
 <style>
 .grid-container {
     margin: 2rem 0;
