--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -114,14 +114,14 @@ body {
 .table-container {
   overflow-x: auto;
   margin: 0 auto;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);*/
   border-radius: 4px;
-  max-width: 100%;
+  max-width: 1600px;
   padding: 20px;
 }
 
 .table {
-  max-width: 100%;
+  max-width: 90%;
   background-color: white;
   margin: 0 auto;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
