--- a/app/templates/lista_pacientes.html
+++ b/app/templates/lista_pacientes.html
@@ -3,12 +3,16 @@
 {% block title %}Lista de Pacientes{% endblock %}
 
 {% block content %}
-<h2>Lista de Pacientes</h2>
-<form action="{{ url_for('pacientes.lista_pacientes') }}" method="get" class="search-form">
-    <input type="text" name="busqueda" placeholder="Buscar pacientes..." value="{{ busqueda }}">
-    <button type="submit">Buscar</button>
-</form>
 
+
+<div class="table-container">
+    <header class="valoracion-header">
+        <h2>Lista de Pacientes</h2>
+        <form action="{{ url_for('pacientes.lista_pacientes') }}" method="get" class="search-form">
+            <input type="text" name="busqueda" placeholder="Buscar pacientes..." value="{{ busqueda }}">
+            <button type="submit">Buscar</button>
+        </form>
+    </header>
 
     <table class="table">
         <thead>
@@ -45,5 +49,6 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
 
