--- a/app/templates/nuevo_paciente.html
+++ b/app/templates/nuevo_paciente.html
@@ -3,39 +3,41 @@
 {% block title %}Nuevo Paciente{% endblock %}
 
 {% block content %}
-<h2>Registro de Nuevo Paciente</h2>
-<div class="form-container">
-    <form id="formPaciente" action="{{ url_for('pacientes.nuevo_paciente') }}" method="POST">
-        <div class="form-group">
-            <label for="nombre" class="form-label">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" class="form-input" required>
-        </div>
-        <div class="form-group">
-            <label for="apellido_paterno" class="form-label">Apellido Paterno:</label>
-            <input type="text" id="apellido_paterno" name="apellido_paterno" class="form-input" required>
-        </div>
-        <div class="form-group">
-            <label for="apellido_materno" class="form-label">Apellido Materno:</label>
-            <input type="text" id="apellido_materno" name="apellido_materno" class="form-input" required>
-        </div>
-        <div class="form-group">
-            <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento:</label>
-            <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" class="form-input" required>
-        </div>
-        <div class="form-group">
-            <label for="telefono" class="form-label">Teléfono:</label>
-            <input type="tel" id="telefono" name="telefono" class="form-input" required>
-        </div>
-        <div class="form-group">
-            <label for="correo" class="form-label">Correo:</label>
-            <input type="email" id="correo" name="correo" class="form-input" required>
-        </div>
-        <div class="form-group">
-            <label for="ciudad" class="form-label">Ciudad:</label>
-            <input type="text" id="ciudad" name="ciudad" class="form-input" required>
-        </div>
-        <button type="submit" class="form-button">Registrar Paciente</button>
-    </form>
+<div class="valoracion-container">
+    <h2>Registro de Nuevo Paciente</h2>
+    <div class="form-container">
+        <form id="formPaciente" action="{{ url_for('pacientes.nuevo_paciente') }}" method="POST">
+            <div class="form-group">
+                <label for="nombre" class="form-label">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" class="form-input" required>
+            </div>
+            <div class="form-group">
+                <label for="apellido_paterno" class="form-label">Apellido Paterno:</label>
+                <input type="text" id="apellido_paterno" name="apellido_paterno" class="form-input" required>
+            </div>
+            <div class="form-group">
+                <label for="apellido_materno" class="form-label">Apellido Materno:</label>
+                <input type="text" id="apellido_materno" name="apellido_materno" class="form-input" required>
+            </div>
+            <div class="form-group">
+                <label for="fecha_nacimiento" class="form-label">Fecha de Nacimiento:</label>
+                <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" class="form-input" required>
+            </div>
+            <div class="form-group">
+                <label for="telefono" class="form-label">Teléfono:</label>
+                <input type="tel" id="telefono" name="telefono" class="form-input" required>
+            </div>
+            <div class="form-group">
+                <label for="correo" class="form-label">Correo:</label>
+                <input type="email" id="correo" name="correo" class="form-input" required>
+            </div>
+            <div class="form-group">
+                <label for="ciudad" class="form-label">Ciudad:</label>
+                <input type="text" id="ciudad" name="ciudad" class="form-input" required>
+            </div>
+            <button type="submit" class="form-button">Registrar Paciente</button>
+        </form>
+    </div>
 </div>
 {% endblock %}
 
